minikube/minikube-grrf-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guardian-grrf-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: guardian-grrf.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guardian-grrf
                port:
                  number: 8888
